--- a/style.css
+++ b/style.css
@@ -10,16 +10,16 @@ header {
     justify-content:space-between;
 }
 
-/* .logo-container {
-    border: 3px solid #000080;
+.logo-container {
+    border: 2px hidden #000080;
     display: inline-block;
     margin: 10px;
-    border-radius: 100px;
     background-color: #eeeeee;
-} */
+}
 .logo1 {
-    width: 100px;
-    height: 100px;
+    border: 3px solid #000000;
+    width: 50px;
+    height: 50px;
 }
 
 
@@ -44,7 +44,7 @@ header {
     border: 0px solid #000080;
     margin:5px;
     font-size:larger;
-}header a:hover {
+}a:hover {
     color: #0000FF;
     text-decoration: underline 3px solid #000080;
 }
@@ -53,4 +53,13 @@ header {
 a {
     text-decoration: none;
     color: black;
+}
+
+div {
+    align-items: center;
+}
+
+#contact {
+	padding: 2em 0;
+	height: 100vh;
 }
